2007-07-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	Added `' to TRACE() macro

	* src/gnome-cmd-file.cc:
	* src/tags/gnome-cmd-tags-doc.cc:
	Allocate metadata memory only when needed

2007-07-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Metadata tags in file properties dialog

2007-07-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Added gcmd_tags_bulk_load()

	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags-libs.h:
	Removed gnome-cmd-tags-libs.h file

2007-07-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.ll:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-doc.h:
	* src/tags/gnome-cmd-tags-exif.cc:
	* src/tags/gnome-cmd-tags-icc.cc:
	* src/tags/gnome-cmd-tags-id3.cc:
	* src/tags/gnome-cmd-tags-iptcdata.cc:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Replaced GHashTable with GnomeCmdFileMetadata_New container
	for ODF and OLE2 metatags

2007-07-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Define CTRL+SHIFT+= binding as user definable (view.equal_panes)

2007-07-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-list-popmenu.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	* src/utils.h:
	Added "Open Terminal" action to toolbar, RMB and user actions.

2007-06-30  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/Makefile.am:
	* src/main.cc:
	Set proper value to DATADIR

2007-06-28  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	* src/gnome-cmd-file.cc:
	Fixed runtime assertions

2007-06-28  Kamil Madac

	* src/gnome-cmd-xfer-progress-win.c:
	Show copied bytes instead of percentage during file transfer
